<resources>
    <string name="app_name">Jia Maa</string>
    <string name="launcher_image_text">launcher_image</string>
    <string name="slider_image">sliderImage</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="text_name">Name</string>
    <string name="father_s_name">Father\'s name</string>
    <string name="cheque">Cheque No</string>
    <string name="age">Age</string>
    <string name="home">Home</string>
    <string name="what_s_new">What\'s New</string>
    <string name="notifications">Notifications</string>
    <string name="media">Media</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="satsang_text_2">Mahatma Ramchandra ji Maharaj (Fatehgarh) Dada Guru Maharaj.</string>
    <string name="satsang_text_3">The thread of faith that holds Ramashram Satsang,  Mathura (RSM) today started rolling in 1873, the year when Param Sant Sri Ramchandra Ji was born in the north Indian province of Manipuri. He studied English, Urdu, and Farsi and worked in a Government office in Distt. Farukhabad (U.P), India.</string>
    <string name="satsang_text_4">Though as a young man, Lalaji, as he was lovingly called, imbibed in him all the religious virtues from his mother, his spiritual journey didn\'t truly begin until he received spiritual initiation from a spiritually enlightened Sufi saint, a follower of Islam. Maulana Shah Fazal Ahmad Khan Sahib (Huzur Maharaj) would later on give Lalaji that moment in time in which he would touch the intangible and see the invisible. This great Sufi saint, Huzur Maharaj, took the revolutionary step of imparting the spiritual knowledge to a disciple who was not a follower of his own religion, thus exemplifying that Spirituality is above and beyond the barriers of religion, cast, and creed.</string>
    <string name="satsang_text_5">Huzur Maharaj inculcated the “Ruhani Ilm” or what Hindus call “Brahm Vidya” or spiritual knowledge, in Lalaji at the age of 18. There were no scriptures read nor verbal instructions delivered. It was just the intimacy and regular contact between the Sufi saint and his disciple that the latter absorbed all the knowledge from his Savior, his Guru. Lalaji’s spiritual experiences seemed to be that of cosmic consciousness, an altered perception of the world he lived in. One day while he was walking down a small residential street with his Guru alongside, he experienced the Divine Vision. In a split of second, He visualized the whole universe dancing to a divine song, fully in rhythm. He also experienced a supernatural power in action in the entire universe. It was a blaze of illumination for a few moments. Following this experience, Lalaji made his primary mission to introduce the people with the true religion and connect them with God. He taught that Faith was the prerequisite of all devotion.</string>
    <string name="satsang_text_6">PP Guru Maharaj</string>
    <string name="satsang_text_7">Samarth Guru Dr. Chaturbhuj Sahay Ji(Guru Maharaj) , personified the maxim, "The more spiritual a person is, the more he is human". In his daily life He  was free from any kind of pose or pretensions. His heart was flowing with love and service for everyone. He always paid due attention to anyone who sought his help whether on spirituality or on any worldly affairs. He had all of the qualities of an ideal Guru and was habitually found in a meditative mood. Perhaps his greatest quality was that he never saw a difference between himself and others. He was not the least obsessed by notions of distinction that he himself was the Enlightened One, while others around him were languishing in the darkness of ignorance. His firmness of self-possession could not be shaken under any circumstances, and he was never perturbed. Tranquility was writ large on his face. He lived the life of a family man fully and unshakably, with a daily life marked with normalcy. He set an excellent example of how to combine spiritual idealism with domestic life. Serving his wife and children to the last, he mindfully attended to all domestic duties.</string>
    <string name="satsang_text_8">In 1930, Guru Maharaj, Samarth Guru Param Sant Dr. Chaturbhuj Sahay Ji, established Ramashram Satsang (Named it after his Guru, Lala Ji Maharaj, Mahatma Sri Ram Chandra Ji)  at Etah (U.P) and later it was shifted at Mathura (U.P) , a northern Indian town . As per the directive of his Guru, he propagated a System of Meditation adaptable to the people irrespective of their religion, community or race. This system of meditation is especially suited for busy and demanding lives of today’s world. If we shape our lifestyles and mold our thought processes according to it, spiritual success and balance in life can be achieved effortlessly. We can learn to live a peaceful life amidst the stress.</string>
    <string name="satsang_text_9">This  system of Sadhana (Spiritual Practices ) and Satsang (Spiritual Assemblies) is a unique unification of Karma (duty), Upasana (devotion), and Gyana (knowledge). The core of this unification is achieved through Dhyana (meditation) in every morning and in the evening for just 15–20 minutes.</string>
    <string name="satsang_text_10">Soon after founding Ramashram Satsang (now also Mathura) and also as per the wishes and the insistence from Mahatma ji Maharaj , the need for a monthly spiritual journal as well as spiritual literature was also felt and  Hereinafter, the publication of a monthly journal “Sadhan" in Hindi (now also in English) began to publish from August of 1933. In addition, Sri Guru Maharaj started to work on Satsang literature. His numerous books, including a seven-volume book on his own spiritual experiences, have helped spiritual aspirants for decades.</string>
    <string name="satsang_text_11">As the decade of 1880–1890 arrived, a noble soul was born on November 3, 1883 in the north Indian province of Etah. He was none other than Paramsant Dr Chaturbhuj Sahay Ji, who would later become the founder of Ramashram Satsang Mathura. He studied Urdu, Farsi, English, Hindi, and Sanskrit. He had a degree in electro-homeopathy and also basic knowledge of Ayurveda that he genuinely used for selfless social service. He never spared himself in paying due attention to anyone who sought his help. He lived the life of a family man and believed that all prayers have one end—service of mankind. His advent was the golden era in the history of Ramashram Satsang Mathura(RSM).</string>
    <string name="satsang_text_12">Dr Chaturbhuj Sahay Ji, our Guru Maharaj, had the opportunity to spend some inexplicably special moments with Lalaji Maharaj (Dada Guru) in Fatehgarh, India during an epidemic outbreak. During these moments, this noble soul experienced an unknown dissemination of intrinsic power towards him whenever he was in the company of Dada Guru. Again there were no verbal lessons nor scriptures read; the knowledge just flowed in the right direction towards a well-chosen end point. The Guru-disciple tradition was reliving, yet again.</string>
    <string name="satsang_text_13">One day Dada Guru passed on the unique tool of Sadhana to our Guru Maharaj. Our system of meditation is based on what Guru Maharaj learned from Dada Guru that day.</string>
    <string name="satsang_text_14">In 1919, Paramsant Dr Sahay Ji received a directive from his Guru to contribute in the propagation of this system of meditation to the spiritual seekers. Guru Maharaj followed his master’s instructions in letter and spirit. Guru Maharaj, upholding the ethics of Guru-Shishya Parampara, brought the venerable tradition of his master\'s lineage to the people, giving the previously little known process of Sadhana, or meditation, to thousands of spiritual seekers. The Satsang spread at a fast pace and Guru Maharaj imparted the Anant Gyan (spiritual knowledge) and taught the Sadhana to all without any discrimination between the deserving and undeserving ones.</string>
    <string name="satsang_text_15">Paramsant Dr. Chaturbhuj Sahay Ji established Ramashram Satsang in 1930 at Etah, his birthplace in northern India.</string>
    <string name="satsang_text_16">Soon after the establishment of the Satsang, the need for a monthly journal and literature was felt. Hence, the publication of Hindi monthly journal Sadhan started in August of 1933. Sri Guru Maharaj started to work on Satsang literature; his numerous books have helped spiritual aspirants for decades, including a seven-volume book on his own spiritual experiences.</string>
    <string name="satsang_text_17">As per his Guru\'s directive, Sri Guru Maharaj gradually started teaching Sadhana over the traditional methods of attaining realization. Eventually, a system of meditation evolved which is a great gift to today’s busy individual. Practicing this Sadhana every morning and evening for only 10–15 minutes can provide results that may take many more years by other methods.</string>
    <string name="satsang_text_18">Param Pujya Jiya Ma had worked closely with Guru Maharaj every step of the way and not only took care of the household duties, but also quietly joined his work of teaching meditation and the practice of Sadhana through her presence during meditation sessions. Her amiable disposition also attracted innumerable spiritual practitioners to RSM. Pundit Mihilal Ji, who later contributed immensely to RSM met Guru Maharaj in 1931. Guru Maharaj prepared Punditji to join his spiritual work and look after the propagation of the Satsang.</string>
    <string name="donate_text_1">Anyone can donate or contribute to Jia Maa Memorial Trust through Account Payee cheques / Drafts /multi city Cheques or through Online / NEFT/RTGS  modes , but such donated amount should not be less than Rs.500/- . Receipts will be issued to the donors subject to realization of the amount.</string>
    <string name="donate_text_2">For NEFT/RTGS/Online Payment modes following bank account No can be used</string>
    <string name="donate_text_3">Bank                   :           Andhra Bank</string>
    <string name="donate_text_4">Branch                 :           Dampier Nagar Branch</string>
    <string name="donate_text_5">Account No             :           169210100053133</string>
    <string name="donate_text_6">IFSC Code              :           ANDB0001692</string>
    <string name="donate_text_7">Kindly inform your transaction details to our office through email or message telephonically with your complete address.</string>
    <string name="donate_text_8">Mobile no is: 8791487080 and email is:</string>
    <string name="donate_text_10">jiamaamemorialtrust@gmail.com</string>
    <string name="donate_text_9">All donations made to us is exempted vide order of commissioner of income Tax –I, Agra vide order letter No–CIT/Tech/Agra/80G–R/J8/2009–10/3288 dated 12/11/2009 under section 80 (G) of Income Tax Act 1961.</string>
    <string name="meeting_text_1">The next meeting of the trust will be held on 3rd September, 2018 at Tundla on the auspicious occasion of Tundla Bhandara of Ramashram Satsang Mathura.</string>
    <string name="meeting_text_2">Application forms can be collected from the trust office free of cost by sending complete address through SMS on mobile no : (+91) 8791487080 or you can write to our office:</string>
    <string name="meeting_text_3">Secretary-</string>
    <string name="meeting_text_4">JIA MAA MEMORIAL TRUST</string>
    <string name="meeting_text_5">SADHAN PRAKASHAN</string>
    <string name="meeting_text_6">DAMPIER NAGAR, MATHURA, U.P - 281001.</string>
    <string name="meeting_text_7">Incomplete forms will not be accepted, therefore make sure to complete your forms in all respect including all enclosures.</string>
    <string name="email_text">For more information visit:</string>
    <string name="email">www.sadhan.in</string>
</resources>