<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/grp_home">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
    </group>
    <group android:id="@+id/grp_new">
        <item
            android:id="@+id/nav_new"
            android:title="@string/what_s_new" />
    </group>
    <group  android:id="@+id/grp_notifications">
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/notifications" />
    </group>
    <group  android:id="@+id/grp_media">
        <item
            android:id="@+id/nav_media"
            android:title="@string/media" />
    </group>
    <group android:id="@+id/grp_search">
        <item
            android:id="@+id/nav_search"
            android:title="@string/search" />
    </group>
    <group  android:id="@+id/grp_settings">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
    </group>
    <group  android:id="@+id/grp_about">
        <item
            android:id="@+id/nav_about"
            android:title="@string/about_us" />
    </group>

</menu>
