<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MeetingsActivity">

    <include
        android:id="@+id/meetings_toolbar"
        layout="@layout/custom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/meetings_toolbar">

            <TextView
                android:id="@+id/text_meeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meeting_text_1"
                android:textColor="@color/dark_black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/meeting_text_2"
                android:textColor="@color/dark_black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/meeting_text_3"
                android:textColor="@color/dark_black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/meeting_text_4"
                android:textColor="@color/dark_black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/meeting_text_5"
                android:textColor="@color/dark_black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/meeting_text_6"
                android:textColor="@color/dark_black"
                android:textSize="15sp" />
            <TextView
                android:layout_marginTop="8dp"
                android:textColor="@color/dark_black"
                android:id="@+id/last_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/meeting_text_7"
                android:textColor="@color/dark_black"
                android:textSize="15sp" />


        </LinearLayout>
</android.support.constraint.ConstraintLayout>